--- a/.github/workflows/code.yml
+++ b/.github/workflows/code.yml
@@ -34,7 +34,7 @@ jobs:
 
           ls -lh snyk-code.sarif || true
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          SNYK_TOKEN: c80a2012-bb87-4482-beb5-399c664f183d
 
       - name: Upload SARIF to GitHub Code Scanning
         if: steps.snyk_code_scan.outputs.has_results == 'true'
